wrong margin has been fixed

--- a/src/scss/base/_sticky-footer.scss
+++ b/src/scss/base/_sticky-footer.scss
@@ -10,6 +10,11 @@ main {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	padding: 50px 0;
+
+	.mb-5 {
+		margin-bottom: 0 !important;
+	}
 }
 
 .footer {
