--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -2,7 +2,6 @@
 	padding: 20px 0;
 	background-color: rgb(39, 39, 39);
 	color: #fff;
-	margin-bottom: 50px;
 
 	&__row {
 		display: flex;
